src/test/ui/numbers-arithmetic/overflowing-rsh-3.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-rsh-3.rs:7:14
   |
LL |     let _x = -1_i64 >> 64;
   |              ^^^^^^^^^^^^ attempt to shift right with overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-rsh-3.rs:4:9
   |
LL | #![deny(arithmetic_overflow, const_err)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

